added list with elements & logo

--- a/index.html
+++ b/index.html
@@ -12,6 +12,23 @@
     />
   </head>
   <body>
-    <header></header>
+    <header>
+      <img src="logo.png" alt="logotipo" />
+      <nav>
+        <ul>
+          <li>Features</li>
+          <li>Pricing</li>
+          <li>Themes</li>
+          <li>Customers</li>
+          <li>Resources</li>
+          <li>Services</li>
+          <li>Partner</li>
+        </ul>
+        <ul>
+          <li>Login</li>
+          <li><button>START FOR FREE</button></li>
+        </ul>
+      </nav>
+    </header>
   </body>
 </html>
