--- a/index.html
+++ b/index.html
@@ -10,19 +10,21 @@
       href="https://fonts.googleapis.com/css2?family=Karla:wght@500&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <header>
-      <img src="logo.png" alt="logotipo" />
-      <nav>
-        <ul>
-          <li>Features</li>
-          <li>Pricing</li>
-          <li>Themes</li>
-          <li>Customers</li>
-          <li>Resources</li>
-          <li>Services</li>
-          <li>Partner</li>
+    <header class="header">
+      <nav class="header-nav">
+        <img src="logo.png" alt="logotipo" />
+
+        <ul class="header-nav_pages">
+          <li><a>Features</a></li>
+          <li><a>Pricing</a></li>
+          <li><a>Themes</a></li>
+          <li><a>Customers</a></li>
+          <li><a>Resources</a></li>
+          <li><a>Services</a></li>
+          <li><a>Partner</a></li>
         </ul>
         <ul>
           <li>Login</li>
