added padding and flex to header

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <header class="header">
       <nav class="header-nav">
-        <img src="logo.png" alt="logotipo" />
+        <img class="logo" src="logo.png" alt="logotipo" />
 
         <ul class="header-nav_pages">
           <li><a>Features</a></li>
@@ -26,9 +26,9 @@
           <li><a>Services</a></li>
           <li><a>Partner</a></li>
         </ul>
-        <ul>
+        <ul class="login-start">
           <li>Login</li>
-          <li><button>START FOR FREE</button></li>
+          <li><button class="start-button">START FOR FREE</button></li>
         </ul>
       </nav>
     </header>
