added color and border radius to button start

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <li><a>Partner</a></li>
         </ul>
         <ul class="login-start">
-          <li>Login</li>
+          <li><a>Login</a></li>
           <li><button class="start-button">START FOR FREE</button></li>
         </ul>
       </nav>
