--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles.css" />
+    <script
+      src="https://kit.fontawesome.com/f39141734b.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <header class="header">
@@ -22,10 +26,14 @@
           <li><a>Pricing</a></li>
           <li><a>Themes</a></li>
           <li><a>Customers</a></li>
-          <li><a>Resources</a></li>
-          <li><a>Services</a></li>
-          <li><a>Partner</a></li>
+          <li>
+            <a>Resources</a>
+            <i class="fas fa-angle-down"></i>
+          </li>
+          <li><a>Services</a> <i class="fas fa-angle-down"></i></li>
+          <li><a>Partner</a> <i class="fas fa-angle-down"></i></li>
         </ul>
+
         <ul class="login-start">
           <li><a>Login</a></li>
           <li><button class="start-button">START FOR FREE</button></li>
